--- a/HW3-Problems.tex
+++ b/HW3-Problems.tex
@@ -49,6 +49,6 @@ Write a \LaTeX{} report discussing your results.  It should include a short expl
    \item Plots showing growing instabilities in the Gaussian Wave for the FTCS scheme.
    \item Similar plots for the stable wave from the Lax-Friedrich method.
 \end{itemize}
-Include the \texttt{.pdf} version of te report and all Python files in your homework repo.
+Include the \texttt{.pdf} version of the report and all Python files in your homework repo.
 
 \end{document}
