--- a/HW3-Problems.tex
+++ b/HW3-Problems.tex
@@ -38,11 +38,11 @@ Write python functions to implement the FTCS (forward in time, centered in space
 \begin{equation*}
    \frac{\partial u}{\partial t} + v \frac{\partial u}{\partial x} = 0
 \end{equation*}
-where $u$ is a scalar and $v$ is constant, applied to a Gaussian Wave. We showed in lecture tat the basic approach
+where $u$ is a scalar and $v$ is constant, applied to a Gaussian Wave. We showed in lecture that the basic approach
 \begin{equation*}
    u_j^{n+1} = u^n_j - \frac{\Delta t}{2\Delta x}v \left( u^n_{j+1} - u^n_{j-1} \right) 
 \end{equation*}
-is unconditionally \emph{unstable}.  Show the instabilities growing over time in your Gaussian Wave.  Compare this to the corrected, and unconditionally \emph{stable} Lax-Friedrich Method.
+is unconditionally \emph{unstable}.  Show the instabilities growing over time in your Gaussian Wave.  Compare this to the corrected, and unconditionally \emph{stable},Lax-Friedrich Method.
 \par
 Write a \LaTeX{} report discussing your results.  It should include a short explanation of the algorithms and implementation with all relevant formula and a discusion of the following:
 \begin{itemize}
