--- a/HW3-Problems.tex
+++ b/HW3-Problems.tex
@@ -48,6 +48,7 @@ Write a \LaTeX{} report discussing your results.  It should include a short expl
 \begin{itemize}
    \item Plots showing growing instabilities in the Gaussian Wave for the FTCS scheme.
    \item Similar plots for the stable wave from the Lax-Friedrich method.
+   \item What, if any, are the restrictions on $\Delta t$ in order for Lax-Friedrichs to be conditionally stable?
 \end{itemize}
 Include the \texttt{.pdf} version of the report and all Python files in your homework repo.
 
