--- a/HW3-Problems.tex
+++ b/HW3-Problems.tex
@@ -52,7 +52,7 @@ Write a \LaTeX{} report discussing your results.  It should include a short expl
 Include the \texttt{.pdf} version of the report and all Python files in your homework repo.
 \par
 \vspace{1cm}
-\textbf{Bonus}: Try both of your advection schemes on a Gaussian Wavepacket.
+\textbf{Bonus}: If you're feeling enthusiastic, try both of your advection schemes on a Gaussian Wavepacket!
 
 
 
